# aurel_opensource_contribution

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
aurel/: __init__.py  __main__.py  advisor.py  analyzer.py  checks.py  cli.py  config.py  guidance.py  models.py  parser.py  profiles.py  providers.py  report.py  scorer.py  workflow.py
docs/: ARCHITECTURE.md  CI_USAGE.md  EXTENDING.md  REPORT_SCHEMA.md
examples/: aurel.yml  sample_report.md
tests/: test_advisor.py  test_analyzer.py  test_checks.py  test_cli.py  test_config.py  test_parser.py  test_profiles.py  test_provider_token_scope.py  test_providers.py  test_report.py  test_scorer.py  test_workflow.py
